# aegiscloud

./: .env.example  .env.production  .gitignore  CAPABILITY_LAYER_IMPLEMENTATION.md  COMPLETE_SEO_100_IMPLEMENTATION.md  Caddyfile  PLUGIN_ECOSYSTEM_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  README.md  SEO_100_SCORE_PLAN.md  SEO_IMPLEMENTATION_COMPLETE.md  SEO_OPTIMIZATION_GUIDE.md  SEO_QUICK_START.md  SESSION_SUMMARY_PLUGIN_SDK.md  THREAT_MODEL.md  UPDATE_INSTRUCTIONS.md  convert_ico.py  docker-compose.test.yml  docker-compose.yml  start.bat
.github/workflows/: ci.yml  code-quality.yml
agent/: Cargo.toml  aegis_agent_setup.iss  build.rs  manifest.xml
agent/src/: crash_recovery.rs  main.rs  network_monitor.rs
agent/src/queue/: mod.rs
agent/src/security/: crypto.rs
agent/src/service/: windows.rs
agent/src/system/: info.rs
agent/src/terminal/: mod.rs
agent/src/tools/: executor.rs
agent/src/updater/: mod.rs
agent/src/ws/: client.rs
assets/logo/: BRAND_GUIDE.md  ICON_USAGE_GUIDE.md
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_oauth_fields.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  observability.py  rate_limit.py  security.py  testing_observability.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: ai.py  ai_pipeline.py  command_queue.py  device_auth.py  lemonsqueezy_service.py  tool_registry.py
backend/tests/: conftest.py  test_auth.py  test_commands.py  test_devices.py  test_skills.py
docs/: CAPABILITY_ARCHITECTURE.md  LEMONSQUEEZY_SETUP.md  PLUGIN_DEVELOPER_GUIDE.md
docs/api/: authentication.md
docs/architecture/: system-overview.md
docs/deployment/: production-checklist.md
docs/runbooks/: incident-response.md
examples/sample-plugin/: Cargo.toml  README.md
examples/sample-plugin/src/: lib.rs
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/components/layout/: sidebar-items.ts
frontend/public/: llms-full.txt  llms.txt  manifest.json  robots.txt  sitemap.xml
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: providers.tsx
plugin-cli/src/: main.rs
plugin-cli/templates/: basic.rs  docker.rs
plugin-runtime/: Cargo.toml
plugin-runtime/src/: lib.rs
plugin-sdk/: Cargo.toml
plugin-sdk-runtime/: Cargo.toml
plugin-sdk-runtime/src/: lib.rs
plugin-sdk/src/: lib.rs
tests/chaos/: chaos_runner.py
tests/load/: locustfile.py
(+120 files in other folders)
