[package]
name = "aegis-agent"
version = "1.2.5"
edition = "2021"
description = "Aegis Cloud Windows Agent — Secure remote management agent running as Windows Service"
authors = ["Aegis Cloud"]
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
whoami = "1.5"
hostname = "0.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi", "sysinfoapi", "winbase", "winuser",
    "tlhelp32", "handleapi", "winsvc",
] }
windows-service = "0.7"

[profile.release]
opt-level = "z"    # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip symbols
codegen-units = 1   # Better optimization

[build-dependencies]
winres = "0.1"
