[package]
name = "aegis-plugin-runtime"
version = "1.0.0"
edition = "2021"
description = "Runtime for loading and executing Aegis Cloud plugins"
license = "MIT"

[dependencies]
aegis-plugin-sdk = { path = "../plugin-sdk" }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
