[package]
name = "aegis-plugin-sdk"
version = "1.0.0"
edition = "2021"
description = "SDK for building Aegis Cloud plugins"
license = "MIT"
repository = "https://github.com/aegis-cloud/plugin-sdk"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
