[package]
name = "aegis-sample-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aegis-plugin-sdk = { path = "../../plugin-sdk" }
aegis-plugin-runtime = { path = "../../plugin-sdk-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
